--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,40 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.ModernAndroidDevelopment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Title" parent="TextAppearance.AppCompat.Title">
-        <item name="android:fontFamily">@font/raleway_bold</item>
-        <item name="fontFamily">@font/raleway_bold</item>
-        <item name="android:textSize">@dimen/_16sdp</item>
-    </style>
-
-    <style name="SubTitle" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:fontFamily">@font/raleway_medium</item>
-        <item name="fontFamily">@font/raleway_medium</item>
-        <item name="android:textSize">@dimen/_14sdp</item>
-    </style>
-
-    <style name="Description" parent="TextAppearance.AppCompat.Body2">
-        <item name="android:fontFamily">@font/raleway_regular</item>
-        <item name="fontFamily">@font/raleway_regular</item>
-        <item name="android:textSize">@dimen/_12sdp</item>
-    </style>
-
-    <style name="Small" parent="TextAppearance.AppCompat.Small">
-        <item name="android:fontFamily">@font/raleway_light</item>
-        <item name="fontFamily">@font/raleway_light</item>
-        <item name="android:textSize">@dimen/_8sdp</item>
-    </style>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <style name="Theme.MyApplication" parent="android:Theme.Material.Light.NoActionBar" />
 </resources>
