--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.ModernAndroidDevelopment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.ModernAndroidDevelopment" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -14,27 +14,5 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Title" parent="TextAppearance.AppCompat.Title">
-        <item name="android:fontFamily">@font/raleway_bold</item>
-        <item name="fontFamily">@font/raleway_bold</item>
-        <item name="android:textSize">@dimen/_16sdp</item>
-    </style>
 
-    <style name="SubTitle" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:fontFamily">@font/raleway_medium</item>
-        <item name="fontFamily">@font/raleway_medium</item>
-        <item name="android:textSize">@dimen/_14sdp</item>
-    </style>
-
-    <style name="Description" parent="TextAppearance.AppCompat.Body2">
-        <item name="android:fontFamily">@font/raleway_regular</item>
-        <item name="fontFamily">@font/raleway_regular</item>
-        <item name="android:textSize">@dimen/_12sdp</item>
-    </style>
-
-    <style name="Small" parent="TextAppearance.AppCompat.Small">
-        <item name="android:fontFamily">@font/raleway_light</item>
-        <item name="fontFamily">@font/raleway_light</item>
-        <item name="android:textSize">@dimen/_8sdp</item>
-    </style>
 </resources>
